<resources>
    <!--Account Strings-->
    <string name="app_name">PROG3210-Messenger</string>
    <string name="loginUsernameHint">Username</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="createAccountButtonString">Create Account</string>
    <string name="createAccountEmailAddressHint">Email Address</string>
    <string name="createAccountPasswordRepeatHint">Repeat Password</string>

    <!--Profile Editor-->
    <string name="profileEditorDisplayNameLabel">Display Name:</string>
    <string name="profileEditorBIOLabel">Bio:</string>
    <string name="profileEditorDOBLabel">Date of Birth:</string>
    <string name="saveProfileInfoButton">Save Profile</string>

    <string name="addContact">Add Contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
</resources>
