<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <EditText
        android:id="@+id/username"
        android:hint="@string/loginUsernameHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/loginPasswordHint"
        android:layout_below="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/loginButton"
        android:text="@string/loginButton"
        android:layout_below="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/createAccountButton"
        android:text="@string/createAccountButtonString"
        android:layout_below="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>